<resources>
    <string name="app_name">TekeTek</string>

    <!-- Accessibility -->
    <string name="send">Send</string>
    <string name="close">Close</string>
    <string name="topic_icon">Topic Icon</string>

    <!-- Alert Dialog -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quit_app_title">Quit App</string>
    <string name="quit_app_desc">Are you sure you want to quit the app?</string>
    <string name="end_debate_title">End the Debate</string>
    <string name="end_debate_desc">Are you sure you want to end the debate?</string>

    <!-- General -->
    <string name="welcome">Welcome</string>
    <string name="write_your_argument">Write your argument…</string>
    <string name="choose_a_topic">Choose a Topic</string>
    <string name="you_can_start_argument">You can start writing your argument.</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="subtitle">Share your opinion, and let artificial intelligence respond with a counter-argument. A real-time debate experience awaits you!</string>
    <string name="add_custom_topic">Add Custom Topic</string>
    <string name="or">OR</string>
    <string name="topic_name">Topic Name</string>
    <string name="add">Add</string>
    <string name="debate_finished">Debate Finished</string>
    <string name="strengths">💪 Strengths</string>
    <string name="weaknesses">⚠️ Weaknesses</string>
</resources>