<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.presentation.add_topic.AddTopicFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_lg"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="@dimen/zero"
                android:text="@string/add_custom_topic"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/closeButton"
                app:layout_constraintEnd_toStartOf="@id/closeButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/closeButton" />

            <ImageView
                android:id="@+id/closeButton"
                android:contentDescription="@string/close"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_close"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="@dimen/icon_md"
                android:layout_height="@dimen/icon_md"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorOnSurface" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/topicNameInputLayout"
            android:layout_width="match_parent"
            android:hint="@string/topic_name"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_md"
            app:boxCornerRadiusBottomEnd="@dimen/radius_md"
            app:boxCornerRadiusBottomStart="@dimen/radius_md"
            app:boxCornerRadiusTopEnd="@dimen/radius_md"
            app:boxCornerRadiusTopStart="@dimen/radius_md"
            app:layout_constraintBottom_toTopOf="@id/addButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/topicNameInput"
                android:inputType="text"
                android:layout_width="match_parent"
                android:imeOptions="actionDone"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:enabled="false"
            app:backgroundTint="@color/button_state_colors"
            app:cornerRadius="@dimen/radius_md"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topicNameInputLayout" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>