<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context=".ui.presentation.home.HomeFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieView"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="@dimen/padding_xlg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/talking" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:layout_marginTop="@dimen/padding_xlg"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/subtitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottieView" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subtitleText"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:layout_marginTop="@dimen/padding_lg"
        android:layout_marginHorizontal="@dimen/padding_xlg"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_xlg"
        android:text="@string/lets_start"
        android:backgroundTint="@color/active"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/padding_xlg"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        app:cornerRadius="@dimen/padding_sm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>