<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presentation.topic.TopicFragment">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_topic"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:gravity="center"
        android:padding="@dimen/padding_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTopics"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:paddingHorizontal="@dimen/padding_sm"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/layoutAddTopic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <LinearLayout
        android:id="@+id/layoutAddTopic"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_lg"
        android:orientation="vertical"
        android:background="@drawable/top_rounded_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewTopics">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:layout_marginBottom="@dimen/padding_md"
            android:text="@string/or" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddCustomTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/active"
            android:text="@string/add_custom_topic"
            app:cornerRadius="@dimen/radius_md" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>